[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level Main.gd" type="Script" id=1]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://OneWay1.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Font_50.tres" type="DynamicFont" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 4 )]
position = Vector2( 1888, 984.631 )
scale = Vector2( 4, 4 )

[node name="Sword1" parent="Player1" instance=ExtResource( 5 )]
position = Vector2( 10.85, -10.85 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 984 )
scale = Vector2( 4, 4 )
move_right = true

[node name="Sword2" parent="Player2" instance=ExtResource( 5 )]
position = Vector2( -10.85, -10.85 )
rotation = 0.785398

[node name="OneWay1" parent="." instance=ExtResource( 3 )]
position = Vector2( 1727, 708 )

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 1016 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -840 )
rotation = 1.5708

[node name="Platform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1984, -840 )
rotation = 1.5708

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Button1" type="Button" parent="."]
margin_left = 1720.0
margin_top = 72.0
margin_right = 1765.0
margin_bottom = 92.0
rect_scale = Vector2( 4, 4 )
text = "jump"

[node name="Button2" type="Button" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 61.0
margin_bottom = 84.0
rect_scale = Vector2( 4, 3.96741 )
text = "jump"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label1" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_right = 519.0
margin_bottom = 367.0
custom_fonts/font = ExtResource( 6 )
text = "0"

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1400.0
margin_right = 1599.0
margin_bottom = 367.0
custom_fonts/font = ExtResource( 6 )
text = "0"
